# react-native-image-to-webp

./: .gitattributes  .gitignore  .lintstagedrc.js  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  NEXT_STEPS.md  QUICK_START.md  README.md  README_SETUP.md  ReactNativeImageToWebp.podspec  package.json  tsconfig.json
.changeset/: curly-windows-hammer.md  initial-release.md
.github/: dependabot.yml
.github/actions/setup/: action.yml
.github/workflows/: build-example-android.yml  build-example-ios.yml  ci.yml  docs.yml  e2e-android.yml  e2e-ios.yml  quality.yml  release.yml  version-bump.yml
.maestro/: CONVERSION_TESTS.md  QUICK_START.md  README.md  config.yaml
.maestro/flows/android/: 00-simple-test-no-launch.yaml  00-simple-test.yaml  01-basic-conversion.yaml  02-all-presets.yaml  03-max-long-edge.yaml  04-manual-path.yaml  05-error-handling.yaml  06-camera-permission.yaml  07-convert-1080p.yaml  08-convert-2k.yaml  09-convert-4k.yaml  10-convert-all-resolutions.yaml  11-convert-with-resize.yaml  12-verify-image-likeness.yaml
.maestro/flows/ios/: 01-basic-conversion.yaml  02-all-presets.yaml  03-max-long-edge.yaml  04-manual-path.yaml  05-error-handling.yaml  06-camera-permission.yaml
android/: build.gradle
android/src/main/cpp/: CMakeLists.txt  ImageToWebPJNI.cpp
android/src/main/java/com/dynlabs/reactnativeimagetowebp/: ReactNativeImageToWebpModule.kt  ReactNativeImageToWebpPackage.kt
cpp/: ImageToWebP.cpp  ImageToWebP.h  README.md  SETUP.md
docs/: ANDROID_EMULATOR_BEST_PRACTICES.md  API.md  ARCHITECTURE.md  CONTRIBUTING.md  DECISIONS.md  GITHUB_CLI_WORKFLOWS.md  IMAGE_COMPARISON.md  PERFORMANCE.md  RELEASE.md  SECURITY.md
example/: app.json  package.json
example/android/: build.gradle  settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/dynlabs.reactnativeimagetowebp.example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/android/gradle/: jcenter.gradle
example/ios/: Podfile
example/ios/ReactNativeImageToWebpExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/ReactNativeImageToWebpExample.xcodeproj/: project.pbxproj
example/ios/ReactNativeImageToWebpExample.xcodeproj/xcshareddata/xcschemes/: ReactNativeImageToWebpExample.xcscheme
example/ios/ReactNativeImageToWebpExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx
ios/: ReactNativeImageToWebp.h  ReactNativeImageToWebp.mm
scripts/: TEST_IMAGES_SETUP.md  bumpversion.js  clean-project.ps1  generate-test-images.py  push-test-images-android.ps1  push-test-images-android.sh  run-tests-visual.ps1  simulate-workflow.ps1  vendor-libwebp.ps1  vendor-libwebp.sh  workflow-commands.ps1
src/: NativeReactNativeImageToWebp.ts  index.tsx  presets.ts  useImageConverter.ts  validation.ts
test-images/: README.md
website/: docusaurus.config.ts  sidebars.ts
website/docs/: api.md  architecture.md  quickstart.md
